css/style.css
/*========== General ==========*/
html {
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
}

h1 {
    font-family: 'Vesper Libre', serif;
    font-weight: 700;
    color: white;
    font-size: 36px;
    line-height: 44px;
    text-align: center;
}

h2 {
    font-family: 'Futura', sans-serif;
    letter-spacing: 2px;
    font-weight: 400;
    font-size: 14px;
    color: #FFFFFF;
    text-transform: uppercase;
}

h3 {
    font-family: 'Roboto Mono', monospace;
    font-weight: 500;
    font-size: 14px;
    color: #8E8E8E;
}

p {
    color: white;
    font-weight: 400;
    font-size: 30px;
    line-height: 44px;
    margin-top: 6px;
}

a, a:visited {
    color: #FFFFFF
}

a:link {
    text-decoration: none;
}

html, body {
    height: 100%;
    margin: 0;
    padding: 0;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

h3, li {
    margin-bottom: 16px;
}

li {
    font-size: 14px;
    color: #FFFFFF;
    line-height: 20px;
}

/*========== Page 1 ==========*/
.page-1 {
    background-color: #000000;
    height: 100%;
}

.page-1-container {
    background-color: #000000;
    display: flex;
    flex-direction: row;
    height: 100%;
    flex-wrap: nowrap;
    justify-content: space-around;
    margin-left: 96px;
    margin-right: 96px;
}

.page-1-container__item {
    flex-wrap: nowrap;
    width: 33%;
}

.page-1-container__item-name {
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1 0 220px;
}

.page-1-container__item-face {
    background: url('../image/portrait_compressed.png') no-repeat center bottom;
    background-size: contain;
    height: 90%;
    flex: 1 0 400px;
    align-self: flex-end;
}

.page-1-container__item-title {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex: 1 0 220px;
    text-align: center;
    width: 100%;
}

.page-1-container__item-title h3 {
    margin-bottom: 0;
}

/*========== Page 2 ==========*/
.page-2 {
    background-color: #212124;
    min-height: 100%;
}

.page-2-container {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: space-between;
    flex-wrap: nowrap;
    padding: 62px 120px;
}

.page-2-container__top {
    display: flex;
    flex-direction: row;
}

.page-2-container__top-left {
    width: 66%;
}

.page-2-container__top-right {
    width: 33%;
    margin-left: 62px;
}

.page-2-container__top-right-projects {
    margin-top: 44px;
}

.page-2-container__bottom {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.page-2-container__bottom-list {
    display: flex;
    list-style: none;
    padding: 0;
    margin: 0;
}

.page-2-container__bottom-list li {
    margin-right: 24px;
}


/*========== Hover ==========*/
.hvr-sweep-to-top {
    position: relative;
    display: inline-block;
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-backface-visibility: hidden;
    -webkit-transition-property: color;
    transition-property: color;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
}

.hvr-sweep-to-top:before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: #6748FF;
    -webkit-transform: scaleY(0);
    transform: scaleY(0);
    -webkit-transform-origin: 50% 100%;
    transform-origin: 50% 100%;
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
}

.hvr-sweep-to-top:hover, .hvr-sweep-to-top:focus, .hvr-sweep-to-top:active {
    color: white;
}

.hvr-sweep-to-top:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
    -webkit-transform: scaleY(1);
    transform: scaleY(1);
}

/*========== Mobile adaptions ==========*/
@media (max-width: 960px) {

    /*========== General ==========*/
    p {
        font-size: 18px;
        line-height: 28px;
    }

    /*========== Page 1 ==========*/
    .page-1-container {
        flex-direction: column;
        align-items: center;
        margin: 0
    }

    .page-1-container__item-name {
        order: 1;
        flex: 1 1 auto;
        margin-bottom: 0;
    }

    .page-1-container__item-face {
        order: 3;
        align-self: auto;
        flex: 1 1 auto;
        width: 100%;
    }

    .page-1-container__item-title {
        order: 2;
        flex: 1 1 auto;
    }

    /*========== Page 2 ==========*/
    .page-2 {
        height: auto;
        width: 100%;
        display: flex;
    }

    .page-2-container {
        flex-direction: column;
        align-items: center;
        padding: 24px 36px;
    }

    .page-2-container__top {
        display: flex;
        flex-direction: column;
    }

    .page-2-container__top-left, .page-2-container__top-right {
        width: 100%;
        margin-left: 0;
    }

    .page-2-container__top-left {
        margin-bottom: 0;
        text-align: center;
    }

    .page-2-container__top-right {
        margin-top: 8px;
        margin-bottom: 0;
        text-align: center;
    }

    .page-2-container__bottom {
        margin-top: 20px;
        text-align: center;
    }

    .page-2-container__bottom-list {
        display: flex;
        flex-direction: column;
    }
}

